src/objects/Budget__c.object
<CustomObject>
    <description>Budget for fiscal year</description>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Budget is approved and can be changed</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_date__c</fullName>
        <label>Approved date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Project budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_h__c</fullName>
        <label>Budget (h)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>FiscalYear</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Musqot_fiscal_year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Musqot fiscal year</label>
        <referenceTo>Musqot_fiscal_year__c</referenceTo>
        <relationshipLabel>Budget</relationshipLabel>
        <relationshipName>Budget</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Budget</relationshipLabel>
        <relationshipName>Budget</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>subproject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipLabel>Budget</relationshipLabel>
        <relationshipName>Budget</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budget</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Budget</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>